# ccsm

./: .ccsm  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix
-v/.claude/: sessions.json
.ccsm/: config.toml  session-detail-template.md
.ccsm/session-group/: agent-first.md  codewhale-integration.md
.claude/: sessions.json  sessions.json.bak
.claude/lessons/: INDEX.md  agent-first-docs.md  ci-publish-tag-guard.md  cross-consumer-format-assumptions.md  g-flag-leak.md  github-secrets-environment-vs-repo.md  lesson-systems.md  migration-version-check.md  opencode-session-timing.md  opencode2-serve-api-reality.md  parallel-test-isolation.md  structured-errors.md  swarm-notification-loop.md  worktree-edge-cases.md
.claude/sessions/: CCSM session acknowlege.md  Integrate recorded-lesson-issues into ccsm.md  Multiple claude session for one ccsm session.md  ccsm-audit-and-vision.md  ccsm-completions.md  checklist-feat.md  demo-pi.md  group-detail.md  group-roadmap.md  groups-list.md  integration-tests.md  quality-audit.md  scanable-sessions.md  session-group.md  session-registry.md  session-scope-awareness.md  test-session.md  unified-data-directory.md  unify-ccsm-config.md
.claude/skills/learned-lesson-issue/: SKILL.md
.claude/skills/learned-lesson-issue/references/: session-lifecycle.md
.claude/skills/seed-session/: SKILL.md
.claude/skills/session-manager/: SKILL.md  skill.json
.claude/skills/session-manager/protocols/: scope-gate.md  (+4 more)
.claude/skills/swarm-testing/: SKILL.md
.claude/skills/wrap-up/: SKILL.md
.github/workflows/: ci.yml
.pi/: settings.json
.pi/extensions/: handoff.ts  question.ts
.pi/extensions/ccsm/: README.md  index.ts
ccsm-swarm/: Cargo.toml
ccsm-swarm/src/: db.rs  main.rs  serve.rs  state.rs  tmux.rs
docs/: MIGRATION-ARCHITECTURE.md  PORTABILITY-DESIGN.md  adding-a-consumer.md  ccsm-swarm.md  codewhale-consumer.md
plugins/opencode/: ccsm-plugin.ts
scripts/: setup.sh
skills/learned-lesson-issue/: SKILL.md
skills/learned-lesson-issue/references/: pty-rendering.md  pty-spawning.md
src/: ansi.rs  config.rs  consumer.rs  main.rs  migrate.rs  pty.rs  registry.rs  sequence.rs  serve.rs  session.rs  sidebar.rs  style.rs  table.rs  transcript.rs
src/commands/: doctor.rs  help.rs  mod.rs  resume.rs  swarm.rs  tutorial.rs  worktree.rs
status/.claude/: sessions.json
tests/: attach_tests.rs  clean_tests.rs  inject_scope_tests.rs  lifecycle_tests.rs  migrate_tests.rs  misc_ops_tests.rs  opencode_v2_workflow_tests.rs  rename_tests.rs  sequence_tests.rs  session_ops_tests.rs  style_tests.rs  worktree_tests.rs
tests/common/: mod.rs
(+5 files in other folders)
