[package]
name = "cc-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
libc = "0.2.186"
portable-pty = "0.9.0"
ratatui = { version = "0.30.1", features = ["crossterm"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
vt100 = "0.16.2"
