[workspace]
resolver = "2"
members = ["ccsm-swarm"]

[package]
name = "ccsm"
version = "0.16.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
fs2 = "0.4"
libc = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
